@@ -5,6 +5,11 @@ ${MIRROR_WGET}/download_package ftp.geneontology.org.goload
 ${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
 ${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua
 
+TAG: goload-6-0-22-1
+DATE: 11/25/2022
+STAFF: lec
+wts2-1054/preprocessrefs.py/change 1 long pumedid query to 1 per pubmedid
+
 TAG: goload-6-0-21-2
 DATE: 08/04/2022
 STAFF: lec
